<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:id="@+id/drawerLayout"
    >


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/accountNavigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/headernavigation"
        >

    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/navigationactionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageslide"
            android:src="@drawable/slide_animation"
            android:scaleType="centerCrop"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <LinearLayout
                    android:background="@color/lightPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:ignore="DisableBaselineAlignment,NestedWeights">
                    <LinearLayout
                        android:paddingStart="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        tools:ignore="RtlSymmetry">
                        <androidx.cardview.widget.CardView
                            app:cardElevation="10dp"
                            android:onClick="loginplantrip"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/map"
                                android:layout_gravity="center_vertical"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_marginTop="30dp"
                                android:layout_marginStart="80dp"
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/travel"
                                android:textStyle="bold"
                                />

                            <TextView
                                android:paddingEnd="5dp"
                                android:textSize="12sp"
                                android:layout_marginTop="50dp"
                                android:layout_marginStart="80dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/traveld"

                                />


                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                    <LinearLayout
                        android:paddingEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        tools:ignore="RtlSymmetry">
                        <androidx.cardview.widget.CardView
                            app:cardElevation="10dp"
                            android:onClick="reviews"
                            app:cardCornerRadius="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">
                            <ImageView
                                android:padding="5dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/reviews"
                                tools:ignore="ContentDescription" />
                            <TextView
                                android:layout_marginTop="30dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/user_challenge"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView

                                android:textSize="12sp"
                                android:layout_marginTop="50dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/drop_your_comments"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                            </TextView>


                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:paddingStart="5dp"
                    android:background="@color/lightPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:ignore="DisableBaselineAlignment,RtlSymmetry">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/googleMap"
                            android:onClick="googleMap"
                            app:cardElevation="10dp"
                            android:layout_gravity="center_vertical"
                            app:cardCornerRadius="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            >
                            <ImageView
                                android:padding="5dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/googlemap"
                                tools:ignore="ContentDescription" />
                            <TextView
                                android:layout_marginTop="30dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/google_map"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                            </TextView>
                            <TextView
                                android:paddingEnd="5dp"
                                android:textSize="12sp"
                                android:layout_marginTop="50dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/find_place"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:ignore="RtlSymmetry">

                            </TextView>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:paddingEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        tools:ignore="RtlSymmetry">
                        <androidx.cardview.widget.CardView
                            app:cardElevation="10dp"
                            android:onClick="showplaces"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp"
                            >
                            <ImageView
                                android:padding="5dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="82dp"
                                android:layout_height="82dp"
                                android:src="@drawable/searchmapplace"
                                tools:ignore="ContentDescription" />
                            <TextView
                                android:layout_marginTop="30dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/searchplace"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                            </TextView>
                            <TextView
                                android:paddingEnd="5dp"
                                android:textSize="12sp"
                                android:layout_marginTop="50dp"
                                android:layout_marginLeft="80dp"
                                android:text="@string/visitplace"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:ignore="RtlHardcoded">

                            </TextView>


                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:background="@color/lightPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:ignore="DisableBaselineAlignment">
                    <LinearLayout
                        android:paddingStart="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        tools:ignore="RtlSymmetry">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/news2"
                            android:onClick="news"
                            app:cardElevation="10dp"
                            app:cardCornerRadius="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">
                            <ImageView
                                android:padding="5dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/newsfeed"
                                tools:ignore="ContentDescription" />
                            <TextView
                                android:layout_marginTop="30dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/news"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                            </TextView>
                            <TextView
                                android:paddingEnd="5dp"
                                android:textSize="12sp"
                                android:layout_marginTop="50dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/latenews"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:ignore="RtlSymmetry">

                            </TextView>


                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                    <LinearLayout
                        android:paddingEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        tools:ignore="RtlSymmetry">
                        <androidx.cardview.widget.CardView
                            app:cardElevation="10dp"
                            android:onClick="registeruser"
                            app:cardCornerRadius="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">
                            <ImageView
                                android:padding="5dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/profile"
                                tools:ignore="ContentDescription" />
                            <TextView
                                android:layout_marginTop="30dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/updatep"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:textSize="12sp"
                                android:layout_marginTop="50dp"
                                android:layout_marginStart="80dp"
                                android:text="@string/updatepd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                            </TextView>


                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <include layout="@layout/bottomlayer">

            </include>

        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>